[package]
name = "ftltunnel"
version = "0.1.0"
authors = ["Matheus Xavier <mxavier+git@rootcert.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libftltunnel = { path = "../libftltunnel" }
clap = "2.33.3"
pretty-hex = "0.2.1"
